# ai-link-net

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  README.md  README.zh.md  environment.yml  pyproject.toml
.github/workflows/: release.yml
aln/: README.md  web_server.py
aln/app/: __init__.py  endpoint.py  main.py
aln/app/adapters/: __init__.py  a2a_client.py  cli_adapter.py  mcp_client.py  prompts.py  provider_executable.py  providers.yaml
aln/app/api/: __init__.py  health.py  well_known.py  ws.py
aln/app/api/v1/: __init__.py  children.py  entities.py  friends.py  fs.py  mail.py  messages.py  parent.py  providers.py  sessions.py  trade.py  ws_messages.py
aln/app/handlers/: __init__.py  _shared.py  a2a_handler.py  agent_handler.py  human_handler.py  mcp_handler.py
aln/app/misc/: __init__.py  common.py  exception_handler.py  provider.py  validation.py
aln/app/schemas/: __init__.py  entity.py  host.py  jsonrpc.py  market.py  provider.py  response.py  token_usage.py  trade.py
aln/app/service/: __init__.py  host_client.py  host_server.py  session_service.py  token_usage_service.py
aln/cli/: __init__.py  contract.py  entity.py  find.py  friend.py  group.py  host.py  init.py  mail.py  mailbox.py  market.py  pay.py  reset.py  status.py  ui.py  update.py  update_check.py
aln/cli/misc/: clistyle.py  common.py  message_input.py  printer.py  process.py  wrappers.py
aln/web/: README.md  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
aln/web/src/: main.tsx  router.test.tsx  router.tsx
aln/web/src/api/: client.ts  entity.ts  friend.ts  fs.ts  host.ts  index.ts  mail.ts  provider.ts  session.ts  trade.ts
aln/web/src/components/agents/: agent-edit-dialog.tsx
aln/web/src/components/chat/: approval-card.tsx  carbon-copy-panel.tsx  chat-area.tsx  contact-list.tsx  group-room.tsx  markdown-content.tsx  message-item.tsx  payment-card.tsx  (+5 more)
aln/web/src/hooks/: use-websocket.test.ts  use-websocket.ts
aln/web/src/lib/: utils.ts
aln/web/src/pages/: chat.tsx  discover.tsx  entities.tsx  login.tsx  reputation.tsx  trade.tsx
aln/web/src/providers/: websocket-provider.tsx
aln/web/src/stores/: app.ts  theme.ts
aln/web/src/styles/: globals.css
aln/web/src/types/: api.ts  discover.ts  index.ts  portal.ts  trade.ts
docs/: Market-Facilitation.md  Market.md  TEST_REPORT.md  group-chat.md  prompt-composition.md  refactor-fp-aln-split.md  releasing.md  todo-market-cross-host-publish.md  todo-market-facilitation.md  web-rewrite.md
example/: DEMO.md  demo_dev_team.sh  demo_market.sh  demo_trade.sh  demo_trade_direct.sh  live_alex_bob_agent_delivery_demo.sh  live_alex_bob_step_demo.sh  live_portal_reputation_demo.sh  quickstart.sh  record_alex_bob_delivery_demo.sh  record_alex_bob_web_replay.sh  record_trust_protocol_demo.sh  render_captioned_video.py  setup_dev_team.bash  test_cloud_connection.bash  test_dev_team_prompt.py  web_replay_alex_bob.mjs
scripts/: deploy.sh  troubleshoot.sh
skills/ai-link-net/: SKILL.md
test/: README.md  __init__.py  conftest.py
test/app/: handler_helpers.py  test_agent_handler_provider_reply.py  test_claude_session.py  test_friend_handler_flow.py  test_group_chat_api.py  test_host_client_response.py  test_host_server_parent_connection.py  test_market_cleanup.py  test_provider_executable.py  test_session_api.py  test_token_usage.py  test_trade_api.py
test/cli/: README.md  conftest.py  test_cli_entity.py  test_cli_friend.py  test_cli_group.py  test_cli_host.py  test_cli_mail.py  test_cli_mailbox.py  test_cli_pay.py  test_cli_pay_help.py  test_cli_printer.py  test_cli_reset.py  test_cli_status.py  test_cli_ui.py  test_cli_update.py  test_cli_wrappers.py  test_update_check.py
(+15 files in other folders)
