[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
# 指定源码包路径
packages = ["aln"]

[project]
name = "ai-link-net"
version = "0.1.0"
description = "AI-Link-Net: A protocol-based application built on Foundation Protocol"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "foundation-protocol @ git+https://github.com/FoundationAgents/foundation-protocol.git",
    "click>=8.3.1",
    "fastapi>=0.116.0",
    "uvicorn>=0.35.0",
    "websockets>=15.0.0",
    "pyyaml>=6.0",
    "qrcode>=8.2",
    "python-multipart>=0.0.26",
]

[project.scripts]
aln = "aln.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
]

[tool.pytest.ini_options]
testpaths = ["test"]
pythonpath = ["."]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]
asyncio_mode = "auto"
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
