[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["aln"]
artifacts = ["aln/web/dist/**"]

[tool.hatch.build.targets.sdist]
include = [
    "/aln",
    "/docs",
    "/example",
    "/scripts",
    "/skills",
    "/test",
    "/AGENTS.md",
    "/CONTRIBUTING.md",
    "/LICENSE",
    "/README.md",
    "/README.zh.md",
    "/pyproject.toml",
]

[tool.hatch.build.targets.sdist.force-include]
"aln/web/dist" = "aln/web/dist"

[project]
name = "ai-link-net"
version = "0.1.0"
description = "AI-Link-Net: A protocol-based application built on Foundation Protocol"
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [
    { name = "Foundation Agents" },
]
keywords = ["agent", "ai", "protocol", "multi-agent", "mcp", "a2a"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
    "foundation-protocol>=0.1,<0.2",
    "click>=8.3.1",
    "fastapi>=0.116.0",
    "packaging>=24.2",
    "python-multipart>=0.0.26",
    "pyyaml>=6.0",
    "qrcode>=8.2",
    "uvicorn>=0.35.0",
    "websockets>=15.0.0",
]

[project.urls]
Homepage = "https://github.com/FoundationAgents/ai-link-net"
Issues = "https://github.com/FoundationAgents/ai-link-net/issues"
Repository = "https://github.com/FoundationAgents/ai-link-net"

[project.scripts]
aln = "aln.cli:main"

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
explicit = true

[tool.uv.sources]
foundation-protocol = { index = "testpypi" }

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
]

[tool.pytest.ini_options]
testpaths = ["test"]
pythonpath = ["."]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]
asyncio_mode = "auto"
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
